--- a/css-glasses-on/index.html
+++ b/css-glasses-on/index.html
@@ -1,16 +1,62 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Glasses On</title>
+    <style>
+        header {
+            background-color: lightblue;
+        }
+
+        section.hero {
+            background-color: rgb(173, 230, 213);
+        }
+
+        .hero-content {
+            max-width: 700px;
+            margin-right: auto;
+            margin-left: auto;
+        }
+
+        .wrapper {
+            margin-left: auto;
+            margin-right: auto;
+            padding-left: 1em;
+            padding-right: 1em;
+            max-width: 1140px;
+        }
+
+        section.grid-4 {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+        }
+    </style>
 </head>
 
 <body>
     <header>
-        header
+        Adipisicing exercitation id dolore dolore aliquip eu sint nostrud aliqua aute aliquip ullamco.
     </header>
     <section class="hero">
-        section hero
+        <div class="hero-content">
+            Velit nulla dolore voluptate Lorem proident ipsum aliqua aliquip. Lorem qui culpa nulla pariatur Lorem sunt sunt quis commodo culpa laboris amet. Laborum excepteur aliquip anim eu mollit ipsum incididunt laborum id culpa aliquip ea duis consequat. Cillum dolor esse eiusmod dolor. Irure officia excepteur eu dolor. Nostrud eu aliquip elit et sit culpa laboris eiusmod occaecat consequat pariatur sit fugiat.
+
+            Deserunt id sint duis non Lorem minim mollit nulla nisi pariatur adipisicing. Excepteur labore cillum labore in irure
+            ea. Aute do quis aute quis laboris irure do tempor fugiat consectetur. Aliquip commodo mollit consequat mollit
+            incididunt pariatur id commodo. Amet enim deserunt fugiat dolore labore ea sunt voluptate ullamco qui excepteur pariatur
+            dolore. Est sint elit consequat ipsum commodo incididunt.
+        </div>
     </section>
     <div class="wrapper">
         <section class="grid-4">
-            four columns
+            <div>
+                Et adipisicing id elit mollit mollit minim ad magna dolor esse enim velit labore.
+            </div>
+            <div>
+                In incididunt veniam elit nostrud consectetur labore aliquip cillum ad.
+            </div>
         </section>
     </div>
 </body>
+</html>
