--- a/responsive-grid-css-website-layout/index.html
+++ b/responsive-grid-css-website-layout/index.html
@@ -20,11 +20,11 @@
             </ul>
         </nav>
         <section class="top-container">
-            <header class="showcase">
+            <div class="showcase">
                 <h1>Your Web Presence</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, veritatis. Ratione esse sunt officiis voluptatibus?</p>
                 <a href="#" class="btn">Read More</a>
-            </header>
+            </div>
 
             <div class="top-box top-box-a">
                 <h4>Membership</h4>
